@@ -11,6 +11,11 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-10-06
+2014-08-28 David Schneider
+- Give new DgramReader argument default value for backward compatibility.
+  New argument broke build with O2OTranslator
+
 Tag: V00-10-05
 2014-08-27 David Schneider
 - add feature: jump to arbitrary offsets in xtc files before second event. 
